# WLauncher

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/cursor/dark/: add.cur  alt.cur  busy.ani  crosshair.cur  forbidden.cur  hand.cur  help.cur  move.cur  pencil.cur  pointer.cur  size EW.cur  size NS.cur  size NeSw.cur  size NwSe.cur  text.cur
public/cursor/light/: add.cur  alt.cur  busy.ani  crosshair.cur  forbidden.cur  hand.cur  help.cur  move.cur  pencil.cur  pointer.cur  size EW.cur  size NS.cur  size NeSw.cur  size NwSe.cur  text.cur
scripts/: build.js  commit.js  init.js
src/: index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/Dialog/: index.tsx
src/components/Dialog/styles/: index.scss
src/components/Footer/: index.tsx
src/components/Footer/styles/: index.scss
src/components/Header/: index.tsx
src/components/Header/styles/: index.scss
src/styles/: app.scss
