[package]
name = "wlauncher"
version = "1.0.0"
description = "Универсальный кроссплатформерный лаунчер проекта «МГЕ»"
authors = ["Sыrok"]
edition = "2021"

[lib]
name = "wlauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25"
